<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Registration"
        android:textColor="@color/appcolor"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"></android.support.design.widget.TextInputLayout>
                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_normal"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_fname"
                        android:inputType="text"
                        android:padding="4dp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp">

                </android.support.design.widget.TextInputLayout>
                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_normal"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_lname"
                        android:inputType="text"
                        android:padding="4dp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="4dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_mobnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/mobnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_mobnumber"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="4dp" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_bloodgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:visibility="gone">

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:visibility="gone">

                </android.support.design.widget.TextInputLayout>

                    <EditText
                        android:id="@+id/bloodgroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_normal"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_blood"
                        android:inputType="text"
                        android:padding="4dp" />


                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_normal"
                        android:focusable="false"
                        android:gravity="center_horizontal"
                        android:hint="@string/hint_dob"
                        android:inputType="number"
                        android:padding="4dp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_location"
                    android:inputType="text"
                    android:padding="4dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_pincode"
                    android:inputType="number"
                    android:padding="4dp" />
        </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="4dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

            </android.support.design.widget.TextInputLayout>
                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:padding="4dp" />


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_pressed"
                android:text="@string/btn_sign_up"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>
